src/interpreter/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> stmt_block
Rule 1     stmt_block -> seq_stmts
Rule 2     stmt_block -> par_stmts
Rule 3     stmt_block -> stmt_block seq_stmts
Rule 4     stmt_block -> stmt_block par_stmts
Rule 5     seq_stmts -> SEQ_BLOCK stmts
Rule 6     par_stmts -> PAR_BLOCK stmts
Rule 7     stmts -> stmt
Rule 8     stmts -> stmts stmt
Rule 9     stmt -> assignment
Rule 10    stmt -> declaration
Rule 11    stmt -> IF LPAREN condition RPAREN stmt
Rule 12    stmt -> IF LPAREN condition RPAREN stmt ELSE stmt
Rule 13    stmt -> WHILE LPAREN condition RPAREN stmt
Rule 14    stmt -> LBRACE stmts RBRACE
Rule 15    stmt -> func
Rule 16    func -> INPUT LPAREN RPAREN
Rule 17    func -> OUTPUT LPAREN expr RPAREN
Rule 18    func -> chan
Rule 19    chan -> ID DOT send_stmt
Rule 20    chan -> ID DOT receive_stmt
Rule 21    send_stmt -> SEND LPAREN expr RPAREN
Rule 22    send_stmt -> SEND LPAREN expr COMMA expr COMMA expr RPAREN
Rule 23    receive_stmt -> RECEIVE LPAREN ID RPAREN
Rule 24    receive_stmt -> RECEIVE LPAREN ID COMMA ID COMMA ID RPAREN
Rule 25    declaration -> c_channel
Rule 26    declaration -> b_declaration
Rule 27    declaration -> s_declaration
Rule 28    declaration -> i_declaration
Rule 29    condition -> condition LE_THAN expr
Rule 30    condition -> condition GE_THAN expr
Rule 31    condition -> condition L_THAN expr
Rule 32    condition -> condition G_THAN expr
Rule 33    condition -> condition EQUAL expr
Rule 34    condition -> condition NOT_EQUAL expr
Rule 35    condition -> expr
Rule 36    assignment -> ID ASSIGN expr
Rule 37    assignment -> ID ASSIGN func
Rule 38    expr -> expr PLUS term
Rule 39    expr -> expr MINUS term
Rule 40    expr -> term
Rule 41    term -> term TIMES factor
Rule 42    term -> term DIVIDE factor
Rule 43    term -> factor
Rule 44    factor -> LPAREN expr RPAREN
Rule 45    factor -> DIGIT
Rule 46    factor -> ID
Rule 47    factor -> STRING_VALUE
Rule 48    factor -> bool_val
Rule 49    bool_val -> TRUE
Rule 50    bool_val -> FALSE
Rule 51    empty -> <empty>
Rule 52    c_channel -> CHANNEL ID LPAREN address COMMA address RPAREN
Rule 53    address -> ID
Rule 54    address -> STRING_VALUE
Rule 55    b_declaration -> BOOL ID
Rule 56    s_declaration -> STRING ID
Rule 57    i_declaration -> INT ID

Terminals, with rules where they appear

ASSIGN               : 36 37
BOOL                 : 55
CHANNEL              : 52
COMMA                : 22 22 24 24 52
DIGIT                : 45
DIVIDE               : 42
DOT                  : 19 20
ELSE                 : 12
EQUAL                : 33
FALSE                : 50
GE_THAN              : 30
G_THAN               : 32
ID                   : 19 20 23 24 24 24 36 37 46 52 53 55 56 57
IF                   : 11 12
INPUT                : 16
INT                  : 57
LBRACE               : 14
LE_THAN              : 29
LPAREN               : 11 12 13 16 17 21 22 23 24 44 52
L_THAN               : 31
MINUS                : 39
NOT_EQUAL            : 34
OUTPUT               : 17
PAR_BLOCK            : 6
PLUS                 : 38
RBRACE               : 14
RECEIVE              : 23 24
RPAREN               : 11 12 13 16 17 21 22 23 24 44 52
SEND                 : 21 22
SEQ_BLOCK            : 5
STRING               : 56
STRING_VALUE         : 47 54
TIMES                : 41
TRUE                 : 49
WHILE                : 13
error                : 

Nonterminals, with rules where they appear

address              : 52 52
assignment           : 9
b_declaration        : 26
bool_val             : 48
c_channel            : 25
chan                 : 18
condition            : 11 12 13 29 30 31 32 33 34
declaration          : 10
empty                : 
expr                 : 17 21 22 22 22 29 30 31 32 33 34 35 36 38 39 44
factor               : 41 42 43
func                 : 15 37
i_declaration        : 28
par_stmts            : 2 4
receive_stmt         : 20
s_declaration        : 27
send_stmt            : 19
seq_stmts            : 1 3
stmt                 : 7 8 11 12 12 13
stmt_block           : 3 4 0
stmts                : 5 6 8 14
term                 : 38 39 40 41 42

Parsing method: LALR

state 0

    (0) S' -> . stmt_block
    (1) stmt_block -> . seq_stmts
    (2) stmt_block -> . par_stmts
    (3) stmt_block -> . stmt_block seq_stmts
    (4) stmt_block -> . stmt_block par_stmts
    (5) seq_stmts -> . SEQ_BLOCK stmts
    (6) par_stmts -> . PAR_BLOCK stmts

    SEQ_BLOCK       shift and go to state 4
    PAR_BLOCK       shift and go to state 5

    stmt_block                     shift and go to state 1
    seq_stmts                      shift and go to state 2
    par_stmts                      shift and go to state 3

state 1

    (0) S' -> stmt_block .
    (3) stmt_block -> stmt_block . seq_stmts
    (4) stmt_block -> stmt_block . par_stmts
    (5) seq_stmts -> . SEQ_BLOCK stmts
    (6) par_stmts -> . PAR_BLOCK stmts

    SEQ_BLOCK       shift and go to state 4
    PAR_BLOCK       shift and go to state 5

    seq_stmts                      shift and go to state 6
    par_stmts                      shift and go to state 7

state 2

    (1) stmt_block -> seq_stmts .

    SEQ_BLOCK       reduce using rule 1 (stmt_block -> seq_stmts .)
    PAR_BLOCK       reduce using rule 1 (stmt_block -> seq_stmts .)
    $end            reduce using rule 1 (stmt_block -> seq_stmts .)


state 3

    (2) stmt_block -> par_stmts .

    SEQ_BLOCK       reduce using rule 2 (stmt_block -> par_stmts .)
    PAR_BLOCK       reduce using rule 2 (stmt_block -> par_stmts .)
    $end            reduce using rule 2 (stmt_block -> par_stmts .)


state 4

    (5) seq_stmts -> SEQ_BLOCK . stmts
    (7) stmts -> . stmt
    (8) stmts -> . stmts stmt
    (9) stmt -> . assignment
    (10) stmt -> . declaration
    (11) stmt -> . IF LPAREN condition RPAREN stmt
    (12) stmt -> . IF LPAREN condition RPAREN stmt ELSE stmt
    (13) stmt -> . WHILE LPAREN condition RPAREN stmt
    (14) stmt -> . LBRACE stmts RBRACE
    (15) stmt -> . func
    (36) assignment -> . ID ASSIGN expr
    (37) assignment -> . ID ASSIGN func
    (25) declaration -> . c_channel
    (26) declaration -> . b_declaration
    (27) declaration -> . s_declaration
    (28) declaration -> . i_declaration
    (16) func -> . INPUT LPAREN RPAREN
    (17) func -> . OUTPUT LPAREN expr RPAREN
    (18) func -> . chan
    (52) c_channel -> . CHANNEL ID LPAREN address COMMA address RPAREN
    (55) b_declaration -> . BOOL ID
    (56) s_declaration -> . STRING ID
    (57) i_declaration -> . INT ID
    (19) chan -> . ID DOT send_stmt
    (20) chan -> . ID DOT receive_stmt

    IF              shift and go to state 12
    WHILE           shift and go to state 13
    LBRACE          shift and go to state 14
    ID              shift and go to state 16
    INPUT           shift and go to state 21
    OUTPUT          shift and go to state 22
    CHANNEL         shift and go to state 24
    BOOL            shift and go to state 25
    STRING          shift and go to state 26
    INT             shift and go to state 27

    stmts                          shift and go to state 8
    stmt                           shift and go to state 9
    assignment                     shift and go to state 10
    declaration                    shift and go to state 11
    func                           shift and go to state 15
    c_channel                      shift and go to state 17
    b_declaration                  shift and go to state 18
    s_declaration                  shift and go to state 19
    i_declaration                  shift and go to state 20
    chan                           shift and go to state 23

state 5

    (6) par_stmts -> PAR_BLOCK . stmts
    (7) stmts -> . stmt
    (8) stmts -> . stmts stmt
    (9) stmt -> . assignment
    (10) stmt -> . declaration
    (11) stmt -> . IF LPAREN condition RPAREN stmt
    (12) stmt -> . IF LPAREN condition RPAREN stmt ELSE stmt
    (13) stmt -> . WHILE LPAREN condition RPAREN stmt
    (14) stmt -> . LBRACE stmts RBRACE
    (15) stmt -> . func
    (36) assignment -> . ID ASSIGN expr
    (37) assignment -> . ID ASSIGN func
    (25) declaration -> . c_channel
    (26) declaration -> . b_declaration
    (27) declaration -> . s_declaration
    (28) declaration -> . i_declaration
    (16) func -> . INPUT LPAREN RPAREN
    (17) func -> . OUTPUT LPAREN expr RPAREN
    (18) func -> . chan
    (52) c_channel -> . CHANNEL ID LPAREN address COMMA address RPAREN
    (55) b_declaration -> . BOOL ID
    (56) s_declaration -> . STRING ID
    (57) i_declaration -> . INT ID
    (19) chan -> . ID DOT send_stmt
    (20) chan -> . ID DOT receive_stmt

    IF              shift and go to state 12
    WHILE           shift and go to state 13
    LBRACE          shift and go to state 14
    ID              shift and go to state 16
    INPUT           shift and go to state 21
    OUTPUT          shift and go to state 22
    CHANNEL         shift and go to state 24
    BOOL            shift and go to state 25
    STRING          shift and go to state 26
    INT             shift and go to state 27

    stmts                          shift and go to state 28
    stmt                           shift and go to state 9
    assignment                     shift and go to state 10
    declaration                    shift and go to state 11
    func                           shift and go to state 15
    c_channel                      shift and go to state 17
    b_declaration                  shift and go to state 18
    s_declaration                  shift and go to state 19
    i_declaration                  shift and go to state 20
    chan                           shift and go to state 23

state 6

    (3) stmt_block -> stmt_block seq_stmts .

    SEQ_BLOCK       reduce using rule 3 (stmt_block -> stmt_block seq_stmts .)
    PAR_BLOCK       reduce using rule 3 (stmt_block -> stmt_block seq_stmts .)
    $end            reduce using rule 3 (stmt_block -> stmt_block seq_stmts .)


state 7

    (4) stmt_block -> stmt_block par_stmts .

    SEQ_BLOCK       reduce using rule 4 (stmt_block -> stmt_block par_stmts .)
    PAR_BLOCK       reduce using rule 4 (stmt_block -> stmt_block par_stmts .)
    $end            reduce using rule 4 (stmt_block -> stmt_block par_stmts .)


state 8

    (5) seq_stmts -> SEQ_BLOCK stmts .
    (8) stmts -> stmts . stmt
    (9) stmt -> . assignment
    (10) stmt -> . declaration
    (11) stmt -> . IF LPAREN condition RPAREN stmt
    (12) stmt -> . IF LPAREN condition RPAREN stmt ELSE stmt
    (13) stmt -> . WHILE LPAREN condition RPAREN stmt
    (14) stmt -> . LBRACE stmts RBRACE
    (15) stmt -> . func
    (36) assignment -> . ID ASSIGN expr
    (37) assignment -> . ID ASSIGN func
    (25) declaration -> . c_channel
    (26) declaration -> . b_declaration
    (27) declaration -> . s_declaration
    (28) declaration -> . i_declaration
    (16) func -> . INPUT LPAREN RPAREN
    (17) func -> . OUTPUT LPAREN expr RPAREN
    (18) func -> . chan
    (52) c_channel -> . CHANNEL ID LPAREN address COMMA address RPAREN
    (55) b_declaration -> . BOOL ID
    (56) s_declaration -> . STRING ID
    (57) i_declaration -> . INT ID
    (19) chan -> . ID DOT send_stmt
    (20) chan -> . ID DOT receive_stmt

    SEQ_BLOCK       reduce using rule 5 (seq_stmts -> SEQ_BLOCK stmts .)
    PAR_BLOCK       reduce using rule 5 (seq_stmts -> SEQ_BLOCK stmts .)
    $end            reduce using rule 5 (seq_stmts -> SEQ_BLOCK stmts .)
    IF              shift and go to state 12
    WHILE           shift and go to state 13
    LBRACE          shift and go to state 14
    ID              shift and go to state 16
    INPUT           shift and go to state 21
    OUTPUT          shift and go to state 22
    CHANNEL         shift and go to state 24
    BOOL            shift and go to state 25
    STRING          shift and go to state 26
    INT             shift and go to state 27

    stmt                           shift and go to state 29
    assignment                     shift and go to state 10
    declaration                    shift and go to state 11
    func                           shift and go to state 15
    c_channel                      shift and go to state 17
    b_declaration                  shift and go to state 18
    s_declaration                  shift and go to state 19
    i_declaration                  shift and go to state 20
    chan                           shift and go to state 23

state 9

    (7) stmts -> stmt .

    IF              reduce using rule 7 (stmts -> stmt .)
    WHILE           reduce using rule 7 (stmts -> stmt .)
    LBRACE          reduce using rule 7 (stmts -> stmt .)
    ID              reduce using rule 7 (stmts -> stmt .)
    INPUT           reduce using rule 7 (stmts -> stmt .)
    OUTPUT          reduce using rule 7 (stmts -> stmt .)
    CHANNEL         reduce using rule 7 (stmts -> stmt .)
    BOOL            reduce using rule 7 (stmts -> stmt .)
    STRING          reduce using rule 7 (stmts -> stmt .)
    INT             reduce using rule 7 (stmts -> stmt .)
    SEQ_BLOCK       reduce using rule 7 (stmts -> stmt .)
    PAR_BLOCK       reduce using rule 7 (stmts -> stmt .)
    $end            reduce using rule 7 (stmts -> stmt .)
    RBRACE          reduce using rule 7 (stmts -> stmt .)


state 10

    (9) stmt -> assignment .

    IF              reduce using rule 9 (stmt -> assignment .)
    WHILE           reduce using rule 9 (stmt -> assignment .)
    LBRACE          reduce using rule 9 (stmt -> assignment .)
    ID              reduce using rule 9 (stmt -> assignment .)
    INPUT           reduce using rule 9 (stmt -> assignment .)
    OUTPUT          reduce using rule 9 (stmt -> assignment .)
    CHANNEL         reduce using rule 9 (stmt -> assignment .)
    BOOL            reduce using rule 9 (stmt -> assignment .)
    STRING          reduce using rule 9 (stmt -> assignment .)
    INT             reduce using rule 9 (stmt -> assignment .)
    SEQ_BLOCK       reduce using rule 9 (stmt -> assignment .)
    PAR_BLOCK       reduce using rule 9 (stmt -> assignment .)
    $end            reduce using rule 9 (stmt -> assignment .)
    RBRACE          reduce using rule 9 (stmt -> assignment .)
    ELSE            reduce using rule 9 (stmt -> assignment .)


state 11

    (10) stmt -> declaration .

    IF              reduce using rule 10 (stmt -> declaration .)
    WHILE           reduce using rule 10 (stmt -> declaration .)
    LBRACE          reduce using rule 10 (stmt -> declaration .)
    ID              reduce using rule 10 (stmt -> declaration .)
    INPUT           reduce using rule 10 (stmt -> declaration .)
    OUTPUT          reduce using rule 10 (stmt -> declaration .)
    CHANNEL         reduce using rule 10 (stmt -> declaration .)
    BOOL            reduce using rule 10 (stmt -> declaration .)
    STRING          reduce using rule 10 (stmt -> declaration .)
    INT             reduce using rule 10 (stmt -> declaration .)
    SEQ_BLOCK       reduce using rule 10 (stmt -> declaration .)
    PAR_BLOCK       reduce using rule 10 (stmt -> declaration .)
    $end            reduce using rule 10 (stmt -> declaration .)
    RBRACE          reduce using rule 10 (stmt -> declaration .)
    ELSE            reduce using rule 10 (stmt -> declaration .)


state 12

    (11) stmt -> IF . LPAREN condition RPAREN stmt
    (12) stmt -> IF . LPAREN condition RPAREN stmt ELSE stmt

    LPAREN          shift and go to state 30


state 13

    (13) stmt -> WHILE . LPAREN condition RPAREN stmt

    LPAREN          shift and go to state 31


state 14

    (14) stmt -> LBRACE . stmts RBRACE
    (7) stmts -> . stmt
    (8) stmts -> . stmts stmt
    (9) stmt -> . assignment
    (10) stmt -> . declaration
    (11) stmt -> . IF LPAREN condition RPAREN stmt
    (12) stmt -> . IF LPAREN condition RPAREN stmt ELSE stmt
    (13) stmt -> . WHILE LPAREN condition RPAREN stmt
    (14) stmt -> . LBRACE stmts RBRACE
    (15) stmt -> . func
    (36) assignment -> . ID ASSIGN expr
    (37) assignment -> . ID ASSIGN func
    (25) declaration -> . c_channel
    (26) declaration -> . b_declaration
    (27) declaration -> . s_declaration
    (28) declaration -> . i_declaration
    (16) func -> . INPUT LPAREN RPAREN
    (17) func -> . OUTPUT LPAREN expr RPAREN
    (18) func -> . chan
    (52) c_channel -> . CHANNEL ID LPAREN address COMMA address RPAREN
    (55) b_declaration -> . BOOL ID
    (56) s_declaration -> . STRING ID
    (57) i_declaration -> . INT ID
    (19) chan -> . ID DOT send_stmt
    (20) chan -> . ID DOT receive_stmt

    IF              shift and go to state 12
    WHILE           shift and go to state 13
    LBRACE          shift and go to state 14
    ID              shift and go to state 16
    INPUT           shift and go to state 21
    OUTPUT          shift and go to state 22
    CHANNEL         shift and go to state 24
    BOOL            shift and go to state 25
    STRING          shift and go to state 26
    INT             shift and go to state 27

    stmts                          shift and go to state 32
    stmt                           shift and go to state 9
    assignment                     shift and go to state 10
    declaration                    shift and go to state 11
    func                           shift and go to state 15
    c_channel                      shift and go to state 17
    b_declaration                  shift and go to state 18
    s_declaration                  shift and go to state 19
    i_declaration                  shift and go to state 20
    chan                           shift and go to state 23

state 15

    (15) stmt -> func .

    IF              reduce using rule 15 (stmt -> func .)
    WHILE           reduce using rule 15 (stmt -> func .)
    LBRACE          reduce using rule 15 (stmt -> func .)
    ID              reduce using rule 15 (stmt -> func .)
    INPUT           reduce using rule 15 (stmt -> func .)
    OUTPUT          reduce using rule 15 (stmt -> func .)
    CHANNEL         reduce using rule 15 (stmt -> func .)
    BOOL            reduce using rule 15 (stmt -> func .)
    STRING          reduce using rule 15 (stmt -> func .)
    INT             reduce using rule 15 (stmt -> func .)
    SEQ_BLOCK       reduce using rule 15 (stmt -> func .)
    PAR_BLOCK       reduce using rule 15 (stmt -> func .)
    $end            reduce using rule 15 (stmt -> func .)
    RBRACE          reduce using rule 15 (stmt -> func .)
    ELSE            reduce using rule 15 (stmt -> func .)


state 16

    (36) assignment -> ID . ASSIGN expr
    (37) assignment -> ID . ASSIGN func
    (19) chan -> ID . DOT send_stmt
    (20) chan -> ID . DOT receive_stmt

    ASSIGN          shift and go to state 33
    DOT             shift and go to state 34


state 17

    (25) declaration -> c_channel .

    IF              reduce using rule 25 (declaration -> c_channel .)
    WHILE           reduce using rule 25 (declaration -> c_channel .)
    LBRACE          reduce using rule 25 (declaration -> c_channel .)
    ID              reduce using rule 25 (declaration -> c_channel .)
    INPUT           reduce using rule 25 (declaration -> c_channel .)
    OUTPUT          reduce using rule 25 (declaration -> c_channel .)
    CHANNEL         reduce using rule 25 (declaration -> c_channel .)
    BOOL            reduce using rule 25 (declaration -> c_channel .)
    STRING          reduce using rule 25 (declaration -> c_channel .)
    INT             reduce using rule 25 (declaration -> c_channel .)
    SEQ_BLOCK       reduce using rule 25 (declaration -> c_channel .)
    PAR_BLOCK       reduce using rule 25 (declaration -> c_channel .)
    $end            reduce using rule 25 (declaration -> c_channel .)
    RBRACE          reduce using rule 25 (declaration -> c_channel .)
    ELSE            reduce using rule 25 (declaration -> c_channel .)


state 18

    (26) declaration -> b_declaration .

    IF              reduce using rule 26 (declaration -> b_declaration .)
    WHILE           reduce using rule 26 (declaration -> b_declaration .)
    LBRACE          reduce using rule 26 (declaration -> b_declaration .)
    ID              reduce using rule 26 (declaration -> b_declaration .)
    INPUT           reduce using rule 26 (declaration -> b_declaration .)
    OUTPUT          reduce using rule 26 (declaration -> b_declaration .)
    CHANNEL         reduce using rule 26 (declaration -> b_declaration .)
    BOOL            reduce using rule 26 (declaration -> b_declaration .)
    STRING          reduce using rule 26 (declaration -> b_declaration .)
    INT             reduce using rule 26 (declaration -> b_declaration .)
    SEQ_BLOCK       reduce using rule 26 (declaration -> b_declaration .)
    PAR_BLOCK       reduce using rule 26 (declaration -> b_declaration .)
    $end            reduce using rule 26 (declaration -> b_declaration .)
    RBRACE          reduce using rule 26 (declaration -> b_declaration .)
    ELSE            reduce using rule 26 (declaration -> b_declaration .)


state 19

    (27) declaration -> s_declaration .

    IF              reduce using rule 27 (declaration -> s_declaration .)
    WHILE           reduce using rule 27 (declaration -> s_declaration .)
    LBRACE          reduce using rule 27 (declaration -> s_declaration .)
    ID              reduce using rule 27 (declaration -> s_declaration .)
    INPUT           reduce using rule 27 (declaration -> s_declaration .)
    OUTPUT          reduce using rule 27 (declaration -> s_declaration .)
    CHANNEL         reduce using rule 27 (declaration -> s_declaration .)
    BOOL            reduce using rule 27 (declaration -> s_declaration .)
    STRING          reduce using rule 27 (declaration -> s_declaration .)
    INT             reduce using rule 27 (declaration -> s_declaration .)
    SEQ_BLOCK       reduce using rule 27 (declaration -> s_declaration .)
    PAR_BLOCK       reduce using rule 27 (declaration -> s_declaration .)
    $end            reduce using rule 27 (declaration -> s_declaration .)
    RBRACE          reduce using rule 27 (declaration -> s_declaration .)
    ELSE            reduce using rule 27 (declaration -> s_declaration .)


state 20

    (28) declaration -> i_declaration .

    IF              reduce using rule 28 (declaration -> i_declaration .)
    WHILE           reduce using rule 28 (declaration -> i_declaration .)
    LBRACE          reduce using rule 28 (declaration -> i_declaration .)
    ID              reduce using rule 28 (declaration -> i_declaration .)
    INPUT           reduce using rule 28 (declaration -> i_declaration .)
    OUTPUT          reduce using rule 28 (declaration -> i_declaration .)
    CHANNEL         reduce using rule 28 (declaration -> i_declaration .)
    BOOL            reduce using rule 28 (declaration -> i_declaration .)
    STRING          reduce using rule 28 (declaration -> i_declaration .)
    INT             reduce using rule 28 (declaration -> i_declaration .)
    SEQ_BLOCK       reduce using rule 28 (declaration -> i_declaration .)
    PAR_BLOCK       reduce using rule 28 (declaration -> i_declaration .)
    $end            reduce using rule 28 (declaration -> i_declaration .)
    RBRACE          reduce using rule 28 (declaration -> i_declaration .)
    ELSE            reduce using rule 28 (declaration -> i_declaration .)


state 21

    (16) func -> INPUT . LPAREN RPAREN

    LPAREN          shift and go to state 35


state 22

    (17) func -> OUTPUT . LPAREN expr RPAREN

    LPAREN          shift and go to state 36


state 23

    (18) func -> chan .

    IF              reduce using rule 18 (func -> chan .)
    WHILE           reduce using rule 18 (func -> chan .)
    LBRACE          reduce using rule 18 (func -> chan .)
    ID              reduce using rule 18 (func -> chan .)
    INPUT           reduce using rule 18 (func -> chan .)
    OUTPUT          reduce using rule 18 (func -> chan .)
    CHANNEL         reduce using rule 18 (func -> chan .)
    BOOL            reduce using rule 18 (func -> chan .)
    STRING          reduce using rule 18 (func -> chan .)
    INT             reduce using rule 18 (func -> chan .)
    SEQ_BLOCK       reduce using rule 18 (func -> chan .)
    PAR_BLOCK       reduce using rule 18 (func -> chan .)
    $end            reduce using rule 18 (func -> chan .)
    RBRACE          reduce using rule 18 (func -> chan .)
    ELSE            reduce using rule 18 (func -> chan .)


state 24

    (52) c_channel -> CHANNEL . ID LPAREN address COMMA address RPAREN

    ID              shift and go to state 37


state 25

    (55) b_declaration -> BOOL . ID

    ID              shift and go to state 38


state 26

    (56) s_declaration -> STRING . ID

    ID              shift and go to state 39


state 27

    (57) i_declaration -> INT . ID

    ID              shift and go to state 40


state 28

    (6) par_stmts -> PAR_BLOCK stmts .
    (8) stmts -> stmts . stmt
    (9) stmt -> . assignment
    (10) stmt -> . declaration
    (11) stmt -> . IF LPAREN condition RPAREN stmt
    (12) stmt -> . IF LPAREN condition RPAREN stmt ELSE stmt
    (13) stmt -> . WHILE LPAREN condition RPAREN stmt
    (14) stmt -> . LBRACE stmts RBRACE
    (15) stmt -> . func
    (36) assignment -> . ID ASSIGN expr
    (37) assignment -> . ID ASSIGN func
    (25) declaration -> . c_channel
    (26) declaration -> . b_declaration
    (27) declaration -> . s_declaration
    (28) declaration -> . i_declaration
    (16) func -> . INPUT LPAREN RPAREN
    (17) func -> . OUTPUT LPAREN expr RPAREN
    (18) func -> . chan
    (52) c_channel -> . CHANNEL ID LPAREN address COMMA address RPAREN
    (55) b_declaration -> . BOOL ID
    (56) s_declaration -> . STRING ID
    (57) i_declaration -> . INT ID
    (19) chan -> . ID DOT send_stmt
    (20) chan -> . ID DOT receive_stmt

    SEQ_BLOCK       reduce using rule 6 (par_stmts -> PAR_BLOCK stmts .)
    PAR_BLOCK       reduce using rule 6 (par_stmts -> PAR_BLOCK stmts .)
    $end            reduce using rule 6 (par_stmts -> PAR_BLOCK stmts .)
    IF              shift and go to state 12
    WHILE           shift and go to state 13
    LBRACE          shift and go to state 14
    ID              shift and go to state 16
    INPUT           shift and go to state 21
    OUTPUT          shift and go to state 22
    CHANNEL         shift and go to state 24
    BOOL            shift and go to state 25
    STRING          shift and go to state 26
    INT             shift and go to state 27

    stmt                           shift and go to state 29
    assignment                     shift and go to state 10
    declaration                    shift and go to state 11
    func                           shift and go to state 15
    c_channel                      shift and go to state 17
    b_declaration                  shift and go to state 18
    s_declaration                  shift and go to state 19
    i_declaration                  shift and go to state 20
    chan                           shift and go to state 23

state 29

    (8) stmts -> stmts stmt .

    IF              reduce using rule 8 (stmts -> stmts stmt .)
    WHILE           reduce using rule 8 (stmts -> stmts stmt .)
    LBRACE          reduce using rule 8 (stmts -> stmts stmt .)
    ID              reduce using rule 8 (stmts -> stmts stmt .)
    INPUT           reduce using rule 8 (stmts -> stmts stmt .)
    OUTPUT          reduce using rule 8 (stmts -> stmts stmt .)
    CHANNEL         reduce using rule 8 (stmts -> stmts stmt .)
    BOOL            reduce using rule 8 (stmts -> stmts stmt .)
    STRING          reduce using rule 8 (stmts -> stmts stmt .)
    INT             reduce using rule 8 (stmts -> stmts stmt .)
    SEQ_BLOCK       reduce using rule 8 (stmts -> stmts stmt .)
    PAR_BLOCK       reduce using rule 8 (stmts -> stmts stmt .)
    $end            reduce using rule 8 (stmts -> stmts stmt .)
    RBRACE          reduce using rule 8 (stmts -> stmts stmt .)


state 30
